feat: An Input component with CSS

--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,7 @@ a:focus-visible {
 
 .button-primary {
   background-color: rgba(59, 121, 246, 0.15);
-  color: #2870ff;
+  color: #9B6A6A;
 }
 .button-primary:hover {
   background-color: rgba(59, 121, 246, 0.25);
